--- a/src/Components/App.css
+++ b/src/Components/App.css
@@ -6,6 +6,11 @@ a {
   text-decoration: none
 }
 
+.app-container {
+  width: 50px;
+  height: 50px;
+}
+
 .movie-tile-container {
   width: 95%;
   margin: 0 auto;
