--- a/src/Components/App.css
+++ b/src/Components/App.css
@@ -6,6 +6,14 @@ a {
   text-decoration: none
 }
 
+.show {
+  display: block;
+}
+
+.hide {
+  display: none;
+}
+
 .app-container {
   width: 50px;
   height: 50px;
