--- a/src/Components/App.css
+++ b/src/Components/App.css
@@ -16,9 +16,8 @@ a {
   display: none;
 }
 
-.app-container {
-  width: 50px;
-  height: 50px;
+.app-container:nth-child(odd) {
+  background: rgba(208,200,200,0.14);
 }
 
 .movie-tile-container {
@@ -43,9 +42,7 @@ a {
 
 .movie-tile-info-container {
   padding-top: 3px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  padding-bottom: 15px;
 }
 
 .movie-tile-title-container {
@@ -54,6 +51,7 @@ a {
 
 .movie-tile-title {
   font-weight: bold;
+  color: #136CB2;
 }
 
 .movie-tile-year {
@@ -86,8 +84,10 @@ a {
 
 .read-review-button {
   margin: 3px 0 3px;
-  background-color: lightyellow;
+  background: -webkit-linear-gradient(top, rgba(250,248,241,1) 0%,rgba(236,226,198,1) 100%);
+  height: 20px;
+  line-height: 1px;
   border-radius: 3px;
-  border-style: outset;
+  border: 1px solid lightgrey;
   cursor: pointer;
 }
